--- a/authors.html
+++ b/authors.html
@@ -223,6 +223,7 @@ init_mathjax();
 
     <h1>Authors on 2015FALL 40123157 CPB 作業 (期中報告)</h1>
         <li><a href="./author/40123157.html">40123157</a> (7)</li>
+        <li><a href="./author/su-jian-wei.html">蘇建瑋</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -291,7 +292,7 @@ init_mathjax();
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2015 40123157
+         <div class="col-xs-10">&copy; 2016 40123157
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
