--- a/index.html
+++ b/index.html
@@ -222,6 +222,13 @@ init_mathjax();
         <div class="col-sm-9">
 
             <article>
+                <h2><a href="./40123256_w17.html">2015 計算機程式 第十七週</a></h2>
+                <div class="summary"><p>Brython動畫</p>
+                    <a class="btn btn-default btn-xs" href="./40123256_w17.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
                 <h2><a href="./2015cp_hw_w8.html">2015 計算機程式 作業八 (自我評量)</a></h2>
                 <div class="summary"><p>[w8] 11/06: 課程筆記網誌建構: Leo Editor, Jupyter notebook, [w9] 11/13: 期中考自我評量</p>
                     <a class="btn btn-default btn-xs" href="./2015cp_hw_w8.html">more ...</a>
@@ -339,7 +346,7 @@ init_mathjax();
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2015 40123157
+         <div class="col-xs-10">&copy; 2016 40123157
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
