--- a/40123256_cp_w1_p.html
+++ b/40123256_cp_w1_p.html
@@ -25,19 +25,25 @@
 <!-- 每一個 section 都代表一張投影片,  -->
 <!-- section 標註中的多 section 標註, 將往下垂直延伸 -->
 <section>
-    <h1>2015cpbw5step</h1>
-    <p>40123157盧毅民2015/10/16</p>		
+    <h1>2015cpbw1step</h1>
+    <p>40123256蘇建瑋2015/09/18</p>		
+</section>
+	
+<section id="hw-task-one">
+    <img src="theme/images/step/cpbw1/1.png" width="1000" alt="step1"></img>
+    <p>step1</p>
 </section>
 
 <section id="hw-task-one">
-    <img src="theme/images/step/cpbw5/1.png" width="1000" alt="step1"></img>
-    <p>step1</p>
+    <img src="theme/images/step/cpbw1/2.png" width="1000" alt="step2"></img>
+    <p>step2</p>
 </section>
-		
+				
 <section>
-    <h1>[w5] 10/16</h1>
-    <p>Leo Editor: 從屬關係架構</p>
-    <p>[w4] 10/09: 國慶連假</p>
+    <h1>[w1] 09/18</h1>
+    <p>Python3: 程式編譯 (Jupyter/SciTE/cmd.exe)</p>
+    <p>Github: 倉儲版本管理</p>
+    <p>copy.com: 雲端資料管理</p>
 </section>
 				
 </div>
