--- a/40123256_cp_w2_p.html
+++ b/40123256_cp_w2_p.html
@@ -25,34 +25,50 @@
 <!-- 每一個 section 都代表一張投影片,  -->
 <!-- section 標註中的多 section 標註, 將往下垂直延伸 -->
 <section>
-    <h1>2015cpbw7step</h1>
-    <p>40123157盧毅民2015/10/30</p>		
+    <h1>2015cpbw2step</h1>
+    <p>401232蘇建瑋2015/09/25</p>		
+</section>
+	
+<section id="hw-task-one">
+    <img src="theme/images/step/cpbw2/0.png" width="1000" alt="step0"></img>
+    <p>step0</p>
 </section>
 
 <section id="hw-task-one">
-    <img src="theme/images/step/cpbw7/1.png" width="1000" alt="step1"></img>
+    <img src="theme/images/step/cpbw2/1.png" width="1000" alt="step1"></img>
     <p>step1</p>
 </section>
 
 <section id="hw-task-one">
-    <img src="theme/images/step/cpbw7/2.png" width="1000" alt="step2"></img>
+    <img src="theme/images/step/cpbw2/2.png" width="1000" alt="step2"></img>
     <p>step2</p>
 </section>
 
 <section id="hw-task-one">
-    <img src="theme/images/step/cpbw7/3.png" width="1000" alt="step3"></img>
+    <img src="theme/images/step/cpbw2/3.png" width="1000" alt="step3"></img>
     <p>step3</p>
 </section>
 
 <section id="hw-task-one">
-    <img src="theme/images/step/cpbw7/4.png" width="1000" alt="step4"></img>
+    <img src="theme/images/step/cpbw2/4.png" width="1000" alt="step4"></img>
     <p>step4</p>
 </section>
 
+<section id="hw-task-one">
+    <img src="theme/images/step/cpbw2/5.png" width="1000" alt="step5"></img>
+    <p>step5</p>
+</section>
+
+<section id="hw-task-one">
+    <img src="theme/images/step/cpbw2/6.png" width="1000" alt="step6"></img>
+    <p>step6</p>
+</section>
+				
 <section>
-    <h1>[w7] 10/30</h1>
-    <p>Python 3: 程式基本概念</p>
-    <p>程式編譯: Jupyter, SciTE</p>
+    <h1>[w2] 09/25</h1>
+    <p>Leo Editor: 管理系統(Markdown, pelican)</p>
+    <p>gh-pages: 倉儲分支</p>
+    <p>CamStudio/FormatFactory/VLCPortable: 影片錄製/轉檔/撥放</p>
 </section>
 				
 </div>
