--- a/40123256_cp_w5_p.html
+++ b/40123256_cp_w5_p.html
@@ -25,43 +25,19 @@
 <!-- 每一個 section 都代表一張投影片,  -->
 <!-- section 標註中的多 section 標註, 將往下垂直延伸 -->
 <section>
-    <h1>2015cpbw3step</h1>
-    <p>40123157盧毅民2015/10/02</p>		
+    <h1>2015cpbw5step</h1>
+    <p>40123256蘇建瑋2015/10/16</p>		
 </section>
 
 <section id="hw-task-one">
-    <img src="theme/images/step/cpbw3/1.png" width="1000" alt="step1"></img>
+    <img src="theme/images/step/cpbw5/1.png" width="1000" alt="step1"></img>
     <p>step1</p>
 </section>
-
-<section id="hw-task-one">
-    <img src="theme/images/step/cpbw3/2.png" width="1000" alt="step2"></img>
-    <p>step2</p>
-</section>
-
-<section id="hw-task-one">
-    <img src="theme/images/step/cpbw3/3.png" width="1000" alt="step3"></img>
-    <p>step3</p>
-</section>
-
-<section id="hw-task-one">
-    <img src="theme/images/step/cpbw3/4.png" width="1000" alt="step4"></img>
-    <p>step4</p>
-</section>
-
-<section id="hw-task-one">
-    <img src="theme/images/step/cpbw3/5.png" width="1000" alt="step5"></img>
-    <p>step5</p>
-</section>
-
-<section id="hw-task-one">
-    <img src="theme/images/step/cpbw3/6.png" width="1000" alt="step6"></img>
-    <p>step6</p>
-</section>
-				
+		
 <section>
-    <h1>[w3] 10/02</h1>
-    <p>Jupyter notebook: 程式轉網誌文章</p>
+    <h1>[w5] 10/16</h1>
+    <p>Leo Editor: 從屬關係架構</p>
+    <p>[w4] 10/09: 國慶連假</p>
 </section>
 				
 </div>
