--- a/40123256_cp_w8_p.html
+++ b/40123256_cp_w8_p.html
@@ -25,25 +25,44 @@
 <!-- 每一個 section 都代表一張投影片,  -->
 <!-- section 標註中的多 section 標註, 將往下垂直延伸 -->
 <section>
-    <h1>2015cpbw1step</h1>
-    <p>40123157盧毅民2015/09/18</p>		
+    <h1>2015cpbw8step</h1>
+    <p>40123256蘇建瑋2015/11/06</p>		
 </section>
-	
+
 <section id="hw-task-one">
-    <img src="theme/images/step/cpbw1/1.png" width="1000" alt="step1"></img>
+    <img src="theme/images/step/cpbw8/1.png" width="1000" alt="step1"></img>
     <p>step1</p>
 </section>
 
 <section id="hw-task-one">
-    <img src="theme/images/step/cpbw1/2.png" width="1000" alt="step2"></img>
+    <img src="theme/images/step/cpbw8/2.png" width="1000" alt="step2"></img>
     <p>step2</p>
 </section>
-				
+
+<section id="hw-task-one">
+    <img src="theme/images/step/cpbw8/3.png" width="1000" alt="step3"></img>
+    <p>step3</p>
+</section>
+
+<section id="hw-task-one">
+    <img src="theme/images/step/cpbw8/4.png" width="1000" alt="step4"></img>
+    <p>step4</p>
+</section>
+
+<section id="hw-task-one">
+    <img src="theme/images/step/cpbw8/5.png" width="1000" alt="step5"></img>
+    <p>step5</p>
+</section>
+
+<section id="hw-task-one">
+    <img src="theme/images/step/cpbw8/6.png" width="1000" alt="step6"></img>
+    <p>step6</p>
+</section>
+
 <section>
-    <h1>[w1] 09/18</h1>
-    <p>Python3: 程式編譯 (Jupyter/SciTE/cmd.exe)</p>
-    <p>Github: 倉儲版本管理</p>
-    <p>copy.com: 雲端資料管理</p>
+    <h1>[w8] 11/06</h1>
+    <p>課程筆記網誌建構: Leo Editor, Jupyter notebook</p>
+    <p>[w9] 11/13: 期中考自我評量</p>
 </section>
 				
 </div>
