--- a/authors.html
+++ b/authors.html
@@ -223,6 +223,7 @@ init_mathjax();
 
     <h1>Authors on 2015FALL 40123157 CPB 作業 (期中報告)</h1>
         <li><a href="./author/40123157.html">40123157</a> (7)</li>
+        <li><a href="./author/40123256.html">40123256</a> (7)</li>
         <li><a href="./author/su-jian-wei.html">蘇建瑋</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
