--- a/authors.html
+++ b/authors.html
@@ -2,7 +2,7 @@
 <html lang="en"
 >
 <head>
-    <title>Authors - 2015FALL 40123256 CPA 作業 (期中報告)</title>
+    <title>Authors - 2015FALL 40123157 CPB 作業 (期中報告)</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -167,14 +167,14 @@ init_mathjax();
 </script>
 
 
-        <meta name="author" content="40123256" />
+        <meta name="author" content="40123157" />
 
     <!-- Open Graph tags -->
-        <meta property="og:site_name" content="2015FALL 40123256 CPA 作業 (期中報告)" />
+        <meta property="og:site_name" content="2015FALL 40123157 CPB 作業 (期中報告)" />
         <meta property="og:type" content="website"/>
-        <meta property="og:title" content="2015FALL 40123256 CPA 作業 (期中報告)"/>
+        <meta property="og:title" content="2015FALL 40123157 CPB 作業 (期中報告)"/>
         <meta property="og:url" content="."/>
-        <meta property="og:description" content="2015FALL 40123256 CPA 作業 (期中報告)"/>
+        <meta property="og:description" content="2015FALL 40123157 CPB 作業 (期中報告)"/>
 
 
     <!-- Bootstrap -->
@@ -185,7 +185,7 @@ init_mathjax();
     <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
 
         <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="2015FALL 40123256 CPA 作業 (期中報告) ATOM Feed"/>
+              title="2015FALL 40123157 CPB 作業 (期中報告) ATOM Feed"/>
 
 </head>
 <body>
@@ -200,7 +200,7 @@ init_mathjax();
                 <span class="icon-bar"></span>
             </button>
             <a href="./" class="navbar-brand">
-2015FALL 40123256 CPA 作業 (期中報告)            </a>
+2015FALL 40123157 CPB 作業 (期中報告)            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
@@ -221,9 +221,8 @@ init_mathjax();
     <div class="row">
         <div class="col-sm-9">
 
-    <h1>Authors on 2015FALL 40123256 CPA 作業 (期中報告)</h1>
-        <li><a href="./author/40123256.html">40123256</a> (8)</li>
-        <li><a href="./author/su-jian-wei.html">蘇建瑋</a> (1)</li>
+    <h1>Authors on 2015FALL 40123157 CPB 作業 (期中報告)</h1>
+        <li><a href="./author/40123157.html">40123157</a> (7)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -266,8 +265,8 @@ init_mathjax();
             </a>
         </li>
         <li class="list-group-item">
-            <a href="https://github.com/40123256" target="_blank">
-                [github] 40123256
+            <a href="https://github.com/40123157" target="_blank">
+                [github] 40123157
             </a>
         </li>
         <li class="list-group-item">
@@ -276,8 +275,8 @@ init_mathjax();
             </a>
         </li>
         <li class="list-group-item">
-            <a href="http://40123256.github.io/cpw/" target="_blank">
-                [github.io] 40123256/cpw
+            <a href="http://40123157.github.io/cpbw8/" target="_blank">
+                [github.io] 40123157/cpbw8
             </a>
         </li>
       </ul>
@@ -292,7 +291,7 @@ init_mathjax();
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2016 40123256
+         <div class="col-xs-10">&copy; 2015 40123157
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
