--- a/40123256_w2.html
+++ b/40123256_w2.html
@@ -439,8 +439,8 @@ init_mathjax();
             </a>
         </li>
         <li class="list-group-item">
-            <a href="http://40123256.github.io/cpw/" target="_blank">
-                [github.io] 40123256作業主頁
+            <a href="http://2015fallhw.github.io/2015fallcpa/user/40123256/" target="_blank">
+                [github.io] 40123256 USER網頁
             </a>
         </li>
       </ul>
