--- a/40123256_w9.html
+++ b/40123256_w9.html
@@ -364,8 +364,8 @@ init_mathjax();
             </a>
         </li>
         <li class="list-group-item">
-            <a href="https://github.com/2015fallhw/2015fallcpb/tree/gh-pages" target="_blank">
-                [github] 2015fallhw/2015fallcpb
+            <a href="https://github.com/2015fallhw/2015fallcpa/tree/gh-pages" target="_blank">
+                [github] 四設計一甲程式主頁
             </a>
         </li>
         <li class="list-group-item">
@@ -374,13 +374,8 @@ init_mathjax();
             </a>
         </li>
         <li class="list-group-item">
-            <a href="https://vimeo.com/user25757242" target="_blank">
-                [vimeo] 40123157
-            </a>
-        </li>
-        <li class="list-group-item">
-            <a href="http://40123256.github.io/cpw/" target="_blank">
-                [github.io] 40123256/cpw
+            <a href="http://2015fallhw.github.io/2015fallcpa/user/40123256/" target="_blank">
+                [github.io] 40123256 USER網頁
             </a>
         </li>
       </ul>
