--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@ init_mathjax();
             </article>
             <hr/>
             <article>
-                <h2><a href="./40123256_w8.html">2015 計算機程式 作業八 (自我評量)</a></h2>
+                <h2><a href="./2015cp_hw_w8.html">2015 計算機程式 作業八 (自我評量)</a></h2>
                 <div class="summary"><p>[w8] 11/06: 課程筆記網誌建構: Leo Editor, Jupyter notebook, [w9] 11/13: 期中考自我評量</p>
-                    <a class="btn btn-default btn-xs" href="./40123256_w8.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="./2015cp_hw_w8.html">more ...</a>
                 </div>
             </article>
             <hr/>
@@ -298,6 +298,8 @@ init_mathjax();
                             href="./index.html">1</a></li>
                     <li class=""><a
                             href="./index2.html">2</a></li>
+                    <li class=""><a
+                            href="./index3.html">3</a></li>
                 <li class="next"><a
                         href="./index2.html">&raquo;</a></li>
         </ul>
@@ -348,8 +350,8 @@ init_mathjax();
             </a>
         </li>
         <li class="list-group-item">
-            <a href="http://40123256.github.io/cpw/" target="_blank">
-                [github.io] 40123256作業主頁
+            <a href="http://2015fallhw.github.io/2015fallcpa/user/40123256/" target="_blank">
+                [github.io] 40123256 USER網頁
             </a>
         </li>
       </ul>
