--- a/40123256_w17.html
+++ b/40123256_w17.html
@@ -457,8 +457,8 @@ canvas.bind('click', on_canvas_click, False)
             </a>
         </li>
         <li class="list-group-item">
-            <a href="http://40123256.github.io/cpw/" target="_blank">
-                [github.io] 40123256作業主頁
+            <a href="http://2015fallhw.github.io/2015fallcpa/user/40123256/" target="_blank">
+                [github.io] 40123256 USER網頁
             </a>
         </li>
       </ul>
