--- a/authors.html
+++ b/authors.html
@@ -222,7 +222,8 @@ init_mathjax();
         <div class="col-sm-9">
 
     <h1>Authors on 2015FALL 40123256 CPA 作業 (期中報告)</h1>
-        <li><a href="./author/40123256.html">40123256</a> (14)</li>
+        <li><a href="./author/40123157.html">40123157</a> (7)</li>
+        <li><a href="./author/40123256.html">40123256</a> (15)</li>
         <li><a href="./author/su-jian-wei.html">蘇建瑋</a> (2)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
@@ -271,8 +272,8 @@ init_mathjax();
             </a>
         </li>
         <li class="list-group-item">
-            <a href="http://40123256.github.io/cpw/" target="_blank">
-                [github.io] 40123256作業主頁
+            <a href="http://2015fallhw.github.io/2015fallcpa/user/40123256/" target="_blank">
+                [github.io] 40123256 USER網頁
             </a>
         </li>
       </ul>
